add section products and newsllater

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="header-clip-path"></div>
     </header>
     <main>
-        <section class="content-form">
+        <section class="content-form align-section-center">
 
             <div class="content">
                 <h2>Ajude o algorítimo a ser mais certeiro</h2>
@@ -48,6 +48,7 @@
                 </p>
             </div>
             <form action="">
+
                 <label for="">Seu nome:</label>
                 <input type="text">
                 <label for="">E-mail:</label>
@@ -70,67 +71,166 @@
             </form>
         </section>
 
-        <section class="products">
-            <h3>Sua seleção especial</h3>
-
+        <section class="products align-section-center">
+            <div class="subtitle">
+                <h3>Sua seleção especial</h3>
+            </div>
             <div class="products-grid">
-            <div class="product-container">
-                <img src="" alt="">
-                <div class="product-description">
-                    <h5>Nome do produto</h5>
-                    <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.
-                    </p>
-                    <p>De: R$23,99</p>
-                    <p class="price">Por: R$19,99</p>
-                    <p>ou 2x de R$9,99</p>
-                    <button>Enviar</button>
+                <div class="product-container">
+                    <img src="" alt="">
+                    <div class="product-description">
+                        <h5>Nome do produto</h5>
+                        <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se
+                            trata.
+                        </p>
+                        <p>De: R$23,99</p>
+                        <p class="price">Por: R$19,99</p>
+                        <p>ou 2x de R$9,99</p>
+                        <button>Comprar</button>
+                    </div>
                 </div>
-            </div>
 
-            <div class="product-container">
-                <img src="" alt="">
-                <div class="product-description">
-                    <h5>Nome do produto</h5>
-                    <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.
-                    </p>
-                    <p>De: R$23,99</p>
-                    <p class="price">Por: R$19,99</p>
-                    <p>ou 2x de R$9,99</p>
-                    <button>Enviar</button>
+                <div class="product-container">
+                    <img src="" alt="">
+                    <div class="product-description">
+                        <h5>Nome do produto</h5>
+                        <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se
+                            trata.
+                        </p>
+                        <p>De: R$23,99</p>
+                        <p class="price">Por: R$19,99</p>
+                        <p>ou 2x de R$9,99</p>
+                        <button>Comprar</button>
+                    </div>
                 </div>
-            </div>
 
-            <div class="product-container">
-                <img src="" alt="">
-                <div class="product-description">
-                    <h5>Nome do produto</h5>
-                    <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.
-                    </p>
-                    <p>De: R$23,99</p>
-                    <p class="price">Por: R$19,99</p>
-                    <p>ou 2x de R$9,99</p>
-                    <button>Enviar</button>
+                <div class="product-container">
+                    <img src="" alt="">
+                    <div class="product-description">
+                        <h5>Nome do produto</h5>
+                        <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se
+                            trata.
+                        </p>
+                        <p>De: R$23,99</p>
+                        <p class="price">Por: R$19,99</p>
+                        <p>ou 2x de R$9,99</p>
+                        <button>Comprar</button>
+                    </div>
                 </div>
-            </div>
 
-            <div class="product-container">
-                <img src="" alt="">
-                <div class="product-description">
-                    <h5>Nome do produto</h5>
-                    <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.
-                    </p>
-                    <p>De: R$23,99</p>
-                    <p class="price">Por: R$19,99</p>
-                    <p>ou 2x de R$9,99</p>
-                    <button>Enviar</button>
+                <div class="product-container">
+                    <img src="" alt="">
+                    <div class="product-description">
+                        <h5>Nome do produto</h5>
+                        <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se
+                            trata.
+                        </p>
+                        <p>De: R$23,99</p>
+                        <p class="price">Por: R$19,99</p>
+                        <p>ou 2x de R$9,99</p>
+                        <button>Comprar</button>
+                    </div>
                 </div>
+
+                <div class="product-container">
+                    <img src="" alt="">
+                    <div class="product-description">
+                        <h5>Nome do produto</h5>
+                        <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se
+                            trata.
+                        </p>
+                        <p>De: R$23,99</p>
+                        <p class="price">Por: R$19,99</p>
+                        <p>ou 2x de R$9,99</p>
+                        <button>Comprar</button>
+                    </div>
+                </div>
+
+                <div class="product-container">
+                    <img src="" alt="">
+                    <div class="product-description">
+                        <h5>Nome do produto</h5>
+                        <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se
+                            trata.
+                        </p>
+                        <p>De: R$23,99</p>
+                        <p class="price">Por: R$19,99</p>
+                        <p>ou 2x de R$9,99</p>
+                        <button>Comprar</button>
+                    </div>
+                </div>
+
+                <div class="product-container">
+                    <img src="" alt="">
+                    <div class="product-description">
+                        <h5>Nome do produto</h5>
+                        <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se
+                            trata.
+                        </p>
+                        <p>De: R$23,99</p>
+                        <p class="price">Por: R$19,99</p>
+                        <p>ou 2x de R$9,99</p>
+                        <button>Comprar</button>
+                    </div>
+                </div>
+
+                <div class="product-container">
+                    <img src="" alt="">
+                    <div class="product-description">
+                        <h5>Nome do produto</h5>
+                        <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se
+                            trata.
+                        </p>
+                        <p>De: R$23,99</p>
+                        <p class="price">Por: R$19,99</p>
+                        <p>ou 2x de R$9,99</p>
+                        <button>Comprar</button>
+                    </div>
+                </div>
+
+                <button class="next-page-button">Ainda mais produtos aqui!</button>
             </div>
-        </div>
         </section>
 
+        <section class="newsletter-container align-section-center">
+            <div class="subtitle">
+                <h3>Compartilhe a novidade</h3>
+            </div>
+            <p>Quer que seus amigos também ganhem a lista personalizada deles? Preencha agora!</p>
+
+            <form id="newsletter" action="">
+                <!-- <div>
+                    <label for="">Seu nome:</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="">E-mail:</label>
+                    <input type="email">
+                </div> -->
+                <div class="align-input">
+                    <div>
+                        <label for="">Seu nome:</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label for="">E-mail:</label>
+                        <input type="email">
+                    </div>
+
+                </div>
+
+                <button type="submit" id="btn-newslatter">Enviar agora</button>
+            </form>
+        </section>
     </main>
     <footer>
+        <div class="footer-content">
+            <p>Testando suas habilidades em HTML, CSS e JS.</p>
+            <p> Linx Impulse</p>
+            <p> 2019</p>
+        </div>
 
+        <div class="footer-clip-path"></div>
     </footer>
     <script src="main.js"></script>
 </body>
