uptade validate and uptade next page

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
             <form action="" id="form-subscribe">
 
                 <label for="name">Seu nome:</label>
-                <input type="text" name="name" id="input-name" required>
+                <input type="text" name="name" id="input-name" placeholder="Fulano de Tal" required>
                 <span class="error"></span>
 
                 <label for="email">E-mail:</label>
-                <input type="email" name="email" id="input-email" required>
+                <input type="email" name="email" id="input-email" placeholder="examplo@email.com" required>
                 <span class="error"></span>
 
                 <label for="cpf">CPF:</label>
-                <input type="number" name="cpf" id="input-cpf" required>
+                <input type="text" name="cpf" id="input-cpf" placeholder=" 000.000.000-00" required>
                 <span class="error"></span>
 
                 <div class="radio">
@@ -116,12 +116,12 @@
                 <div class="align-input">
                     <div>
                         <label for="name">Seu nome:</label>
-                        <input type="text" name="name" id="newsletter-input-name" required>
+                        <input type="text" name="name" id="newsletter-input-name" placeholder="Fulano de Tal" required>
                         <span class="error"></span>
                     </div>
                     <div>
                         <label for="email">E-mail:</label>
-                        <input type="email" name="email" id="newsletter-input-email" required>
+                        <input type="email" name="email" id="newsletter-input-email" placeholder="examplo@email.com" required>
                         <span class="error"></span>
                     </div>
                 </div>
